--- a/doc/prompt.3
+++ b/doc/prompt.3
@@ -26,7 +26,6 @@ following links:
 .IP "1." 3
 <gemini://harkadev.com/oss/>
 .IP "2." 3
-<https://harkadev.com/oss/>
-.SH SEE ALSO
+<https://harkadev.com/oss/> # SEE ALSO
 .PP
 \f[B]FGETS(3)\f[], \f[B]PROMPT(3)\f[]
